# ai-bulletin

./: .gitignore  README.md  admin.py  database.py  main.py  models.py  pyproject.toml  requirements.txt  requirements.txt.bak  sample.env  schemas.py
crew/: README.md  ai_bulletin_crew.py  crew_engine.py  main.py  newsletter_storage.py
crew/config/: agents.yaml  tasks.yaml
crew/schemas/: newsletter_topics.py
jobs/: newsletter_job.py
templates/: admin_dashboard.html  admin_login.html  index.html  unsubscribe.html
utils/: email.py
